--- a/.config
+++ b/.config
@@ -38,3 +38,6 @@ CONFIG_PACKAGE_kmod-nf-conntrack-netlink=y
 CONFIG_PACKAGE_kmod-nf-ipvs=y
 CONFIG_PACKAGE_kmod-veth=y
 CONFIG_PACKAGE_kmod-dummy=y
+CONFIG_KERNEL_BUILD_DOMAIN="Azure"
+CONFIG_KERNEL_BUILD_USER="OpenWrt-CI"
+CONFIG_TARGET_IMAGES_GZIP=y
