--- a/.config
+++ b/.config
@@ -58,6 +58,7 @@ CONFIG_PACKAGE_luci-app-wrtbwmon=y
 CONFIG_PACKAGE_luci-app-zerotier=y
 CONFIG_PACKAGE_luci-theme-argon=y
 CONFIG_PACKAGE_luci-theme-darkmatter=y
+CONFIG_PACKAGE_luci-theme-infinityfreedom=y
 CONFIG_PACKAGE_nano=y
 CONFIG_PACKAGE_screen=y
 CONFIG_PACKAGE_shadow-utils=y
